log
Fri 19 Aug 2022 12:23:31 PM UTC: 
 tests:  0|6
total_score: 0/70
80a85de
Fri 19 Aug 2022 12:33:19 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:41: error: expected ‘,’ or ‘;’ before ‘)’ token
   33 |   List* list=(List*)malloc(sizeof(List)));
      |                                         ^
Compilation failed
019b0fa
Fri 19 Aug 2022 12:33:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
334af94
Fri 19 Aug 2022 12:43:58 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:9: error: ‘n’ undeclared (first use in this function)
   42 |   list* n =list->current;
      |         ^
list.c:42:9: note: each undeclared identifier is reported only once for each function it appears in
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e6279c8
